fix bug with long links pushing favorite button off-screen

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -134,6 +134,8 @@ a {
   text-decoration: none;
   color: var(--list-title-color);
   flex: 1;
+  overflow: hidden;
+  word-break: break-word;
 }
 
 .container {
